--- a/src/components/styles/shop.css
+++ b/src/components/styles/shop.css
@@ -46,7 +46,6 @@
     flex-direction: column;
     gap: 16px;
     font-size: 12px;
-    position: fixed;
 }
 
 .game {
@@ -143,6 +142,53 @@
     background-color: #ff002bd3;
     transition: background-color 0.2s ease-out, transform 0.2s ease-out;
     transform: scale(1.045);
+}
+
+.genres {
+    display: flex;
+    gap: 10px;
+    overflow-x: auto;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+.gener {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    backdrop-filter: blur(20px);
+    background-color: rgba(0, 0, 0, 0.61);
+    border-radius: 8px;
+    padding: 2px 12px;
+    transition: background-color 0.15s ease-in, transform 0.15s ease-in;
+    will-change: background-color, transform;
+    font-size: 10px;
+}
+
+.gener:hover {
+    background-color: #ff002bd3;
+    transition: background-color 0.2s ease-out, transform 0.2s ease-out;
+    transform: scale(1.045);
+}
+
+.genres::-webkit-scrollbar {
+    height: 5px;
+}
+
+.genres::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 0px;
+    visibility: hidden;
+}
+
+.genres::-webkit-scrollbar-thumb {
+    background: #888888a6;
+    border-radius: 10px;
+}
+
+.genres::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .page {
