--- a/src/components/styles/shop.css
+++ b/src/components/styles/shop.css
@@ -46,6 +46,7 @@
     flex-direction: column;
     gap: 16px;
     font-size: 12px;
+    position: fixed;
 }
 
 .game {
@@ -76,7 +77,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background-color: aqua;
+    background-color: rgb(48, 48, 48);
     flex: 1.7;
 }
 
@@ -144,14 +145,25 @@
     transform: scale(1.045);
 }
 
-.genres {
-    display: flex;
-    gap: 10px;
-    overflow-x: auto;
+.genres-section {
     padding: 10px;
     position: sticky;
     top: 0;
     z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(8px);
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.genres {
+    display: flex;
+    gap: 10px;
+    overflow-x: auto;
+    
 }
 .gener {
     display: flex;
