--- a/src/components/styles/shop.css
+++ b/src/components/styles/shop.css
@@ -39,14 +39,19 @@
     overflow-x: auto;
     height: 100%;
 }
+
 .nav-bar {
-    padding-top: 22px;
+    padding-top: 6px 22px;
     grid-area: nav;
     display: flex;
     flex-direction: column;
     gap: 16px;
     font-size: 12px;
-    position: fixed;
+    height: 100vh; /* Ensures it spans the full viewport height */
+    overflow-y: auto; /* Enables vertical scrolling */
+    position: sticky; /* Keeps it in place while the page scrolls */
+    top: 0; /* Ensures it sticks to the top of the screen */
+    width: 100%;
 }
 
 .game {
@@ -126,6 +131,13 @@
     border-radius: 4px;
 }
 
+.categs-section {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    font-size: 10px;
+}
+
 .categ {
     display: flex;
     gap: 16px;
@@ -163,7 +175,8 @@
     display: flex;
     gap: 10px;
     overflow-x: auto;
-    
+    display: flex;
+    flex-direction: column;
 }
 .gener {
     display: flex;
@@ -176,12 +189,14 @@
     transition: background-color 0.15s ease-in, transform 0.15s ease-in;
     will-change: background-color, transform;
     font-size: 10px;
+    padding: 4px 8px;
 }
 
 .gener:hover {
     background-color: #ff002bd3;
     transition: background-color 0.2s ease-out, transform 0.2s ease-out;
     transform: scale(1.045);
+
 }
 
 .genres::-webkit-scrollbar {
