--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
     display: flex;
     padding: 8px 8px 0px 8px;
+    backdrop-filter: blur(3px);
+    z-index: 13;
+    padding: 8px;
+    align-items: center;
   }
   
   .logo {
