--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
   color: rgb(255, 255, 255);
-  background-color: #111111;
+  background-color: #0c0c0c;
   width: 100%;
   padding: 0px;
-  margin: ;
 }
 
 body {
