--- a/src/components/styles/gamePage.css
+++ b/src/components/styles/gamePage.css
@@ -83,11 +83,11 @@ html, body {
     left: 0;
     z-index: 6;
     position: absolute;
-    background: linear-gradient(90deg, rgba(0,0,0,0.8) 40%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(90deg, rgba(0,0,0,0.83) 40%, rgba(255,255,255,0) 100%);
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 100px;
+    gap: 40px;
 }
 
 .game-infos {
@@ -95,7 +95,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 120px 0 60px;
+    padding: 0 100px 0 45px;
     align-items: flex-start;
     gap: 8px;
 }
@@ -121,7 +121,7 @@ html, body {
     font-size: 19px;
     margin-bottom: 22px;
     line-height: 1.3;
-    height: 200px;
+    max-height: 200px;
     overflow-x: auto;
 }
 
@@ -184,4 +184,72 @@ html, body {
     filter: drop-shadow(0 0 1.2em #fdfdfdd3);
 }
 
-.gameplay-shots
+.gameplay-shots {
+    padding: 20px 0px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background: linear-gradient(
+        90deg, 
+        rgba(255,255,255,0) 0%, 
+        #000000bd 50%, 
+        rgba(255,255,255,0) 100%
+    );
+    mask-image: linear-gradient(
+        to right, 
+        transparent 0%, 
+        black 20%, 
+        black 90%, 
+        black 100%
+    );
+    backdrop-filter: blur(2px);
+}
+
+.shots {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 25px;
+    grid-auto-rows: 120px;
+    gap: 22px;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding: 0px 22px;
+    border-radius: 8px;
+    transform: perspective(600px) rotateY(-12deg);
+    background: linear-gradient(
+        90deg, 
+        rgba(255,255,255,0) 0%, 
+        #000000bd 50%, 
+        rgba(255,255,255,0) 100%
+    );
+    mask-image: linear-gradient(
+        to bottom, 
+        transparent 0%, 
+        black 20%, 
+        black 80%, 
+        transparent 100%
+    );
+}
+
+.shot {
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 10px 10px 27px -9px rgba(0,0,0,0.75);
+}
+
+.shot>img {
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
