--- a/src/components/styles/gamePage.css
+++ b/src/components/styles/gamePage.css
@@ -115,14 +115,14 @@ html, body {
 }
 
 .game-title {
-    font-size: 46px;
+    font-size: 40px;
 }
 
 .game-discribtion {
     font-size: 19px;
-    margin-bottom: 22px;
+    margin-bottom: 12px;
     line-height: 1.3;
-    max-height: 200px;
+    max-height: 100px;
     overflow-x: auto;
 }
 
@@ -333,4 +333,25 @@ html, body {
   transform: translateY(20px);
   pointer-events: none;
   transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.back-to-shop {
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    font-size: 14px;
+    margin-bottom: 6px;
+    will-change: transform;
+    transition: transform 0.15s ease-out, color 0.15s ease-out;
+}
+
+.back-to-shop:hover {
+    color: #f80029;
+    transition: transform 0.15s ease-in, color 0.15s ease-in;
+    transform: scale(1.1);
 }
