--- a/src/components/styles/gamePage.css
+++ b/src/components/styles/gamePage.css
@@ -1,10 +1,4 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-}
+
 
 .game-page {
     display: flex;
@@ -15,7 +9,7 @@ html, body {
     height: 100%;
     overflow: hidden;
     margin: 0;
-    padding: 0;
+    padding: 0px 0px 0px 0px;
     position: relative;
 }
 
@@ -133,6 +127,14 @@ html, body {
     gap: 8px;
 }
 
+.important {
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .rating {
     display: flex;
     flex-direction: column;
@@ -170,7 +172,7 @@ html, body {
 }
 
 .wish:hover {
-    filter: drop-shadow(0 0 0.5em #ff002bd3);
+    filter: drop-shadow(0 0 0.5em #ff002b);
     transition: filter 0.38s ease-in;
 }
 
