--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   color-scheme: light dark;
   color: rgb(255, 255, 255);
-  background-color: #0c0c0c;
+  background-color: hsl(0, 0%, 5%);
   width: 100%;
   padding: 0px;
 }
